--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@midudev/tailwind-animations": "^0.0.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "aos": "^2.3.4",
     "astro": "^4.11.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
